@@ -1,12 +1,11 @@
-# $NetBSD: Makefile,v 1.10 2004/03/08 19:40:41 jmmv Exp $
+# $NetBSD: Makefile,v 1.11 2004/04/09 14:29:09 minskim Exp $
 #
 
-DISTNAME=	xchm-0.9
-PKGREVISION=	1
+DISTNAME=	xchm-0.9.1
 CATEGORIES=	misc
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=xchm/}
 
-MAINTAINER=	tech-pkg@NetBSD.org
+MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	http://xchm.sourceforge.net/
 COMMENT=	CHM viewer for UNIX
 
