@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5495 2004/04/09 13:56:22 minskim Exp $
+$NetBSD: CHANGES,v 1.5496 2004/04/09 14:29:09 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1865,3 +1865,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated glut to 6.0.1 [adam 2004-04-09]
 	Updated wine to 20040408 [adam 2004-04-09]
 	Updated ed2k-gtk-gui to 0.6.2 [minskim 2004-04-09]
+	Updated xchm to 0.9.1 [minskim 2004-04-09]
